# pdc-phase-oscillator-model

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: model.py  utility.py
src/pdc_phase_oscillator_model/: __init__.py  model.py  utility.py
src/pdc_phase_oscillator_model/sample/: __init__.py
src/sample/: sample.py
