[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdc-phase-oscillator-model"
version = "0.1"
authors = [
  { name="Nikita Makarov", email="makaroff.nickita2013@yandex.ru" },
]
description = "A model of phase oscillator with pulse delayed coupling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"