[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdc_phase_oscillator_model"
version = "1.2"
authors = [
  { name="nikonru", email="makaroff.nickita2013@yandex.ru" },
]
description = "A model of phase oscillator with pulse delayed coupling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy >= 1.23.1',
  'matplotlib >= 3.7.1',
]

[project.urls]
Homepage = "https://github.com/nikonru/pdc-phase-oscillator-model"
Issues = "https://github.com/nikonru/pdc-phase-oscillator-model/issues"
